added custom fonts, UI for open events

--- a/We Build SG/Info.plist
+++ b/We Build SG/Info.plist
@@ -40,5 +40,12 @@
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
 	</array>
+	<key>UIAppFonts</key>
+	<array>
+		<string>RobotoSlab-Bold.ttf</string>
+		<string>RobotoSlab-Regular.ttf</string>
+		<string>RobotoSlab-Light.ttf</string>
+		<string>RobotoSlab-Thin.ttf</string>
+	</array>
 </dict>
 </plist>
